<resources>
    <string name="app_name">ViewApp</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unknown">Unknown</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="copy_password">Copy password</string>
    <string name="register">Register</string>
    <string name="creating_an_account">Creating an account</string>
    <string name="remember_me">Remember me</string>
    <string name="title_activity_main_activitywq"/>
</resources>