<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creating_an_account"
        android:textSize="30sp"
        android:fontFamily="serif"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:hint="@string/login"
        style="@style/Widget.ViewApp.TextInputLayout.Auth"
        android:layout_marginTop="@dimen/edit_text_top_margin"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:hint="@string/password"
        style="@style/Widget.ViewApp.TextInputLayout.Auth"

        android:layout_marginTop="@dimen/edit_text_top_margin">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:hint="@string/copy_password"
        style="@style/Widget.ViewApp.TextInputLayout.Auth"
        android:layout_marginTop="@dimen/edit_text_top_margin">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/copy_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_height="wrap_content"
        android:text="@string/register"
        style="@style/Widget.ViewApp.Button.Auth"
        android:layout_marginTop="@dimen/button_top_margin">

    </com.google.android.material.button.MaterialButton>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/haveAccount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Have account"
        android:textColor="@color/purple_700">


    </com.google.android.material.textview.MaterialTextView>

</LinearLayout>